// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/viewHeader/ViewHeaderSearch > return search menu 1`] = `
<div>
  <div
    class="board-search-field"
  >
    <i
      class="CompassIcon icon-magnify board-search-icon"
    />
    <input
      class="Editable "
      placeholder="Search cards"
      title=""
    />
  </div>
</div>
`;

exports[`components/viewHeader/ViewHeaderSearch > search text after input 1`] = `
<div>
  <div
    class="board-search-field"
  >
    <i
      class="CompassIcon icon-magnify board-search-icon"
    />
    <input
      class="Editable "
      placeholder="Search cards"
      title="Hello"
    />
  </div>
</div>
`;
